# odgi

./: .gitignore  CMakeLists.txt  Cargo.toml  INSTALL.md  build.rs  guix-rs.scm  guix.scm
rust/: blobstore.cc  main.rs
src/: node.hpp  odgi-api.h  odgi-graph.hpp  odgi.hpp
